<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱购</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="under_commend">推荐</string>
    <string name="under_type">分类</string>
    <string name="under_collect">收藏</string>
    <string name="under_mine">我的</string>
    <string name="main_title_type">爱购分类</string>
    <string name="main_title_collect">爱收藏</string>
    <string name="collect_tab_product">宝贝收藏</string>
    <string name="collect_tab_shop">店铺收藏</string>
    <string name="mine_login_hine0">爱登陆，才爱购物</string>
    <string name="mine_center_title">个人中心</string>
    <string name="mine_login_hine1">账号：邮箱/手机号/用户名</string>
    <string name="mine_login_hine2">密码：</string>
    <string name="mine_login_hine3"></string>
    <string name="mine_login_but2">登陆</string>
    <string name="mine_login_but3">注册并登陆</string>
    <string name="mine_login_other0">可使用第三方账号登陆</string>
    <string name="mine_login_othertb">淘宝账号</string>
    <string name="mine_login_otherxl">新浪微博账号</string>
    <string name="mine_login_otherqq">QQ账号</string>
    <string name="mine_info_singup">登陆</string>
    <string name="mine_info_title2"></string>
    <string name="mine_info_but3">签到</string>
    <string name="mine_info_but4">分享</string>
    <string name="mine_info_but2">0元购</string>
    <string name="mine_info_but1">摇一摇</string>
    <string name="tab_type_search">搜索宝贝</string>
    <string name="mine_login_but4">登陆</string>
    <string name="main_img_text_11">我的衣橱</string>
    <string name="main_img_text_12">我爱我家</string>
    <string name="main_img_text_21">时尚装饰</string>
    <string name="main_img_text_22">精选鞋包</string>
    <string name="main_img_text_23">数码达人</string>
    <string name="main_img_text_31">吃伙食堂</string>
    <string name="main_img_text_32">情趣乐园</string>
    <string name="main_img_text_41">精选店铺</string>
    <string name="main_img_text_42">0元换购</string>

    
</resources>
